--- a/tests/lib/v2_create_git_repo.yml
+++ b/tests/lib/v2_create_git_repo.yml
@@ -7,8 +7,8 @@ input:
 
 steps:
   - script: >
-      curl -X DELETE "{{.input.host}}/api/v1/repos/{{.input.user}}/{{.input.repo}}" -u "{{.input.user}}:{{.input.password}}"
+      curl -X DELETE -s "{{.input.host}}/api/v1/repos/{{.input.user}}/{{.input.repo}}" -u "{{.input.user}}:{{.input.password}}"
   - script: >
-      curl  -X POST --fail "{{.input.host}}/api/v1/user/repos" -u "{{.input.user}}:{{.input.password}}" -d "{\"name\": \"{{.input.repo}}\", \"auto_init\": true, \"default_branch\": \"master\"}" -H "Content-Type: application/json"'
+      curl  -X POST -s --fail "{{.input.host}}/api/v1/user/repos" -u "{{.input.user}}:{{.input.password}}" -d "{\"name\": \"{{.input.repo}}\", \"auto_init\": true, \"default_branch\": \"master\"}" -H "Content-Type: application/json"
 
 output: {}
