feat(api): add env/vars context

--- a/tests/08_v2_analyze.yml
+++ b/tests/08_v2_analyze.yml
@@ -105,7 +105,9 @@ testcases:
     - script: "cat MyFirstWorkflow-1-0-myFirstJob-checkout | grep \"Checkout completed\""
     - script: "cat MyFirstWorkflow-1-0-myFirstJob-customaction | grep \"Welcome in action test-parent-action\""
     - script: "cat MyFirstWorkflow-1-0-myFirstJob-customaction | grep \"Hello Foo Doe from project ITCLIPRJVCS\""
-    - script: "cat MyFirstWorkflow-1-0-myFirstJob-step-2 | grep \"Thank you\""
+    - script: "cat MyFirstWorkflow-1-0-myFirstJob-workflowEnv | grep \"workflowValue\""
+    - script: "cat MyFirstWorkflow-1-0-myFirstJob-stepEnv | grep \"stepValue\""
+    - script: "cat MyFirstWorkflow-1-0-myThirdJob-jobEnv | grep \"jobValue\""
     - script: {{.cdsctl}} -f {{.cdsctl.config}} experimental workflow jobs status ITCLIPRJVCS my_vcs_server {{.git.user}}/myrepo MyFirstWorkflow 1 --format json
       assertions:
         - result.systemoutjson ShouldHaveLength 5
