test: 08_analyze refactor
Signed-off-by: François Samin <francois.samin@ovhcloud.com>

--- a/tests/lib/v2_create_project.yml
+++ b/tests/lib/v2_create_project.yml
@@ -21,6 +21,7 @@ steps:
       sshKeyName:
         from: result.systemoutjson.systemoutjson0.name
   - script: >
+      #! /bin/bash
       cat << EOF > /tmp/project_vcs.yml
       version: v1.0
       name: my_vcs_server
