--- a/tests/08_v2_analyze.yml
+++ b/tests/08_v2_analyze.yml
@@ -2,26 +2,14 @@ name: Project Analyze testSuite
 testcases:
 - name: prepare test
   steps:
-
-  - type: v2_create_git_repo
-    host: "{{.git.host}}"
-    repo: "myrepo"
-    user: "{{.git.user}}"
-    password: "{{.git.password}}"
-
-  - type: v2_create_project
-    cdsctl_command: "{{.cdsctl}} -f {{.cdsctl.config}}"
-    project: "ITCLIPRJVCS"
-    git_host: "{{.git.host}}"
-
   - script: gpg --batch --yes --delete-secret-key 2B74B3591CEFB2F534265465E027B500E97E52E7 || true
   - script: gpg --batch --yes --delete-key 2B74B3591CEFB2F534265465E027B500E97E52E7 || true
-  # - script: curl -X DELETE "{{.git.host}}/api/v1/repos/{{.git.user}}/myrepo" -u "{{.git.user}}:{{.git.password}}"
-  # - script: {{.cdsctl}} -f {{.cdsctl.config}} project remove --force ITCLIPRJVCS
-  # - script: {{.cdsctl}} -f {{.cdsctl.config}} group remove ITCLIPRJVCS --force
-  # - script: {{.cdsctl}} -f {{.cdsctl.config}} group add ITCLIPRJVCS
-  # - script: {{.cdsctl}} -f {{.cdsctl.config}} project create ITCLIPRJVCS "Test Project" ITCLIPRJVCS
-  # - script: 'curl --fail -X POST "{{.git.host}}/api/v1/user/repos" -u "{{.git.user}}:{{.git.password}}" -d "{\"name\": \"myrepo\", \"auto_init\": true, \"default_branch\": \"master\"}" -H "Content-Type: application/json"'
+  - script: curl -X DELETE "{{.git.host}}/api/v1/repos/{{.git.user}}/myrepo" -u "{{.git.user}}:{{.git.password}}"
+  - script: {{.cdsctl}} -f {{.cdsctl.config}} project remove --force ITCLIPRJVCS
+  - script: {{.cdsctl}} -f {{.cdsctl.config}} group remove ITCLIPRJVCS --force
+  - script: {{.cdsctl}} -f {{.cdsctl.config}} group add ITCLIPRJVCS
+  - script: {{.cdsctl}} -f {{.cdsctl.config}} project create ITCLIPRJVCS "Test Project" ITCLIPRJVCS
+  - script: 'curl --fail -X POST "{{.git.host}}/api/v1/user/repos" -u "{{.git.user}}:{{.git.password}}" -d "{\"name\": \"myrepo\", \"auto_init\": true, \"default_branch\": \"master\"}" -H "Content-Type: application/json"'
   - script: gpg --import ./fixtures/gpg-ADMIN/key.priv
   - script: gpg --import ./fixtures/gpg-ADMIN/key.pub
   - script: 'curl -X POST {{.git.host}}/api/v1/user/gpg_keys -u "{{.git.user}}:{{.git.password}}" -H "Content-type: application/json" -d @./fixtures/gpg-ADMIN/key.pub.json'
@@ -47,12 +35,12 @@ testcases:
 
 - name: import / export vcs server
   steps:
-  #- script: export PROJECT_KEY=ITCLIPRJVCS && envsubst < ./fixtures/ITCLIPRJVCS/my_vcs_project.yml > ./fixtures/ITCLIPRJVCS/my_vcs_project_replaced.yml
-  #- script: {{.cdsctl}} -f {{.cdsctl.config}} experimental project vcs import ITCLIPRJVCS ./fixtures/ITCLIPRJVCS/my_vcs_project_replaced.yml
-  #- script: {{.cdsctl}} -f {{.cdsctl.config}} experimental project vcs list ITCLIPRJVCS --format json
-  #  assertions:
-  #  - result.code ShouldEqual 0
-  #  - result.systemoutjson.systemoutjson0.name ShouldEqual "my_vcs_server"
+  - script: export PROJECT_KEY=ITCLIPRJVCS && envsubst < ./fixtures/ITCLIPRJVCS/my_vcs_project.yml > ./fixtures/ITCLIPRJVCS/my_vcs_project_replaced.yml
+  - script: {{.cdsctl}} -f {{.cdsctl.config}} experimental project vcs import ITCLIPRJVCS ./fixtures/ITCLIPRJVCS/my_vcs_project_replaced.yml
+  - script: {{.cdsctl}} -f {{.cdsctl.config}} experimental project vcs list ITCLIPRJVCS --format json
+    assertions:
+    - result.code ShouldEqual 0
+    - result.systemoutjson.systemoutjson0.name ShouldEqual "my_vcs_server"
   - script: {{.cdsctl}} -f {{.cdsctl.config}} experimental project vcs export ITCLIPRJVCS my_vcs_server > my_vcs_project_exported.yml
   - script: grep 'my_vcs_server' my_vcs_project_exported.yml
 
