--- a/tests/08_v2_workflow_generic_artifacts.yml
+++ b/tests/08_v2_workflow_generic_artifacts.yml
@@ -1,7 +1,5 @@
 name: Upload and Download generic artifacts from Workflow as code v2
 vars:
-  cdsctl_command: |-
-    {{.cdsctl | default "cdsctl"}} -f {{.cdsctl.config | default "$HOME/.cdsrc"}}
   cds_project: "ITV2ARTIFACTSGENERIC"
   cds_region: |-
     {{.cds_region}}
@@ -20,7 +18,7 @@ testcases:
 - name: Prepare test
   steps:
   - name: "Verify cdsctl configuration"
-    script: "{{.cdsctl_command}} user me --format json"
+    script: "{{.cdsctl }} -f {{.cdsctl.config}} user me --format json"
     vars:
       cdsUser:
         from: result.systemoutjson.username
@@ -29,7 +27,7 @@ testcases:
     info: "Connected CDS user is {{.cdsUser}}"
 
   - type: v2_create_project
-    cdsctl_command: "{{.cdsctl_command}}"
+    cdsctl_command: "{{.cdsctl }} -f {{.cdsctl.config}}"
     cds_project: "{{.cds_project}}"
     git_host: "{{.git_host}}"
     git_user: "{{.git_user}}"
@@ -37,7 +35,7 @@ testcases:
     cds_region: "{{.cds_region}}"
 
   - type: v2_add_git_repo
-    cdsctl_command: "{{.cdsctl_command}}"
+    cdsctl_command: "{{.cdsctl }} -f {{.cdsctl.config}}"
     cds_project: "{{.cds_project}}"
     cds_hook_url: "{{.cds_hook_url}}"
     git_host: "{{.git_host}}"
