--- a/tests/08_v2_workflow_generic_artifacts.yml
+++ b/tests/08_v2_workflow_generic_artifacts.yml
@@ -1,24 +1,13 @@
 name: Upload and Download generic artifacts from Workflow as code v2
 vars:
   cds_project: "ITV2ARTIFACTSGENERIC"
-  cds_region: |-
-    {{.cds_region}}
-  cds_hook_url: |-
-    {{.gitea.hook.url | default "http://localhost:8083"}}
-  git_host: |-
-    {{.git.host | default "http://localhost:3000"}}
-  git_user: |-
-    {{.git.user | default "gituser"}}
-  git_password: |-
-    {{.git.password | default "giteapassword"}}
   git_repo: "it_v2_artifacts_generic"
-  gpg_key_id: "{{.gpg.key_id}}"
 
 testcases:
 - name: Prepare test
   steps:
   - name: "Verify cdsctl configuration"
-    script: "{{.cdsctl }} -f {{.cdsctl.config}} user me --format json"
+    script: "{{.cdsctl}} -f {{.cdsctl.config}} user me --format json"
     vars:
       cdsUser:
         from: result.systemoutjson.username
@@ -27,36 +16,36 @@ testcases:
     info: "Connected CDS user is {{.cdsUser}}"
 
   - type: v2_create_project
-    cdsctl_command: "{{.cdsctl }} -f {{.cdsctl.config}}"
+    cdsctl_command: "{{.cdsctl}} -f {{.cdsctl.config}}"
     cds_project: "{{.cds_project}}"
-    git_host: "{{.git_host}}"
-    git_user: "{{.git_user}}"
-    git_password: "{{.git_password}}"
-    cds_region: "{{.cds_region}}"
+    git_host: "{{.git.host}}"
+    git_user: "{{.git.user}}"
+    git_password: "{{.git.password}}"
+    cds_region: "{{.cds.region}}"
 
   - type: v2_add_git_repo
-    cdsctl_command: "{{.cdsctl }} -f {{.cdsctl.config}}"
+    cdsctl_command: "{{.cdsctl}} -f {{.cdsctl.config}}"
     cds_project: "{{.cds_project}}"
-    cds_hook_url: "{{.cds_hook_url}}"
-    git_host: "{{.git_host}}"
-    git_user: "{{.git_user}}"
-    git_password: "{{.git_password}}"
-    git_repo: "{{.git_repo}}"
+    cds_hook_url: "{{.gitea.hook.url}}"
+    git_host: "{{.git.host}}"
+    git_user: "{{.git.user}}"
+    git_password: "{{.git.password}}"
+    git_repo: "{{.git.repo}}"
 
   - type: v2_install_gpg_key
-    gpg_key_id: "{{.gpg_key_id}}"
-    git_host: "{{.git_host}}"
-    git_user: "{{.git_user}}"
-    git_password: "{{.git_password}}"
+    gpg_key_id: "{{.gpg.key_id}}"
+    git_host: "{{.git.host}}"
+    git_user: "{{.git.user}}"
+    git_password: "{{.git.password}}"
 
 - name: Push workflow file
   steps:
   - type: v2_push_files_on_repo
-    git_repo: "{{.git_repo}}"
-    git_host: "{{.git_host}}"
-    git_user: "{{.git_user}}"
-    git_password: "{{.git_password}}"
-    gpg_key_id: "{{.gpg_key_id}}"
+    git_repo: "{{.git.repo}}"
+    git_host: "{{.git.host}}"
+    git_user: "{{.git.user}}"
+    git_password: "{{.git.password}}"
+    gpg_key_id: "{{.gpg.key_id}}"
     files:
       workflows/workflowA.yaml:
         name: WorkflowA
@@ -83,7 +72,7 @@ testcases:
                   grep foobar foo.txt
 
   - name: Check CDS project analyses status
-    script: cdsctl experimental project analysis list {{.cds_project}} my_vcs_server {{.git_user}}/{{.git_repo}} --format json
+    script: cdsctl experimental project analysis list {{.cds_project}} my_vcs_server {{.git.user}}/{{.git.repo}} --format json
     assertions:
     - result.systemoutjson ShouldHaveLength 2
     - result.systemoutjson.systemoutjson0.status ShouldEqual "Skipped"
@@ -92,7 +81,7 @@ testcases:
     delay: 10
 
   - name: Check that the CDS workflow has at least one execution and is Success
-    script: cdsctl experimental workflow history {{.cds_project}} my_vcs_server {{.git_user}}/{{.git_repo}} WorkflowA --format json
+    script: cdsctl experimental workflow history {{.cds_project}} my_vcs_server {{.git.user}}/{{.git.repo}} WorkflowA --format json
     assertions:
     - result.systemoutjson ShouldHaveLength 1
     - result.systemoutjson.systemoutjson0.status ShouldEqual "Success"
