--- a/tests/08_v2_workflow_generic_artifacts.yml
+++ b/tests/08_v2_workflow_generic_artifacts.yml
@@ -30,7 +30,7 @@ testcases:
     git_host: "{{.git.host}}"
     git_user: "{{.git.user}}"
     git_password: "{{.git.password}}"
-    git_repo: "{{.git.repo}}"
+    git_repo: "{{.git_repo}}"
 
   - type: v2_install_gpg_key
     gpg_key_id: "{{.gpg.key_id}}"
@@ -41,7 +41,7 @@ testcases:
 - name: Push workflow file
   steps:
   - type: v2_push_files_on_repo
-    git_repo: "{{.git.repo}}"
+    git_repo: "{{.git_repo}}"
     git_host: "{{.git.host}}"
     git_user: "{{.git.user}}"
     git_password: "{{.git.password}}"
@@ -72,7 +72,7 @@ testcases:
                   grep foobar foo.txt
 
   - name: Check CDS project analyses status
-    script: cdsctl experimental project analysis list {{.cds_project}} my_vcs_server {{.git.user}}/{{.git.repo}} --format json
+    script: cdsctl experimental project analysis list {{.cds_project}} my_vcs_server {{.git.user}}/{{.git_repo}} --format json
     assertions:
     - result.systemoutjson ShouldHaveLength 2
     - result.systemoutjson.systemoutjson0.status ShouldEqual "Skipped"
@@ -81,7 +81,7 @@ testcases:
     delay: 10
 
   - name: Check that the CDS workflow has at least one execution and is Success
-    script: cdsctl experimental workflow history {{.cds_project}} my_vcs_server {{.git.user}}/{{.git.repo}} WorkflowA --format json
+    script: cdsctl experimental workflow history {{.cds_project}} my_vcs_server {{.git.user}}/{{.git_repo}} WorkflowA --format json
     assertions:
     - result.systemoutjson ShouldHaveLength 1
     - result.systemoutjson.systemoutjson0.status ShouldEqual "Success"
