fix: integration tests
Signed-off-by: François Samin <francois.samin@ovhcloud.com>

--- a/tests/lib/v2_install_gpg_key.yml
+++ b/tests/lib/v2_install_gpg_key.yml
@@ -35,6 +35,7 @@ steps:
         "armored_public_key" : $(cat /tmp/{{.input.gpg_key_id}}.gpg.pub.quoted)
       }
       EOF
+      cat /tmp/{{.input.gpg_key_id}}.gpg.pub.json
 
   # Get exiting gpg key for users
   - type: http
