--- a/ui/src/tsconfig.app.json
+++ b/ui/src/tsconfig.app.json
@@ -8,7 +8,8 @@
     "target": "es5",
     "lib": [
       "es2016",
-      "dom"
+      "dom",
+      "ES2021.String"
     ],
     "outDir": "../out-tsc/app",
     "module": "esnext",
@@ -16,7 +17,7 @@
     "paths": {
       "url": [
         "../node_modules/url"
-      ],
+      ]
     },
     "types": []
   },
