--- a/ui/src/tsconfig.spec.json
+++ b/ui/src/tsconfig.spec.json
@@ -8,7 +8,8 @@
     "target": "es5",
     "lib": [
       "es2016",
-      "dom"
+      "dom",
+      "ES2021.String"
     ],
     "outDir": "../out-tsc/spec",
     "module": "es2020",
