--- a/ui/package.json
+++ b/ui/package.json
@@ -24,24 +24,24 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "13.3.0",
+    "@angular/animations": "14.3.0",
     "@angular/cdk": "13.3.0",
-    "@angular/common": "13.3.0",
-    "@angular/compiler": "13.3.0",
-    "@angular/core": "13.3.0",
-    "@angular/forms": "13.3.0",
-    "@angular/platform-browser": "13.3.0",
-    "@angular/platform-browser-dynamic": "13.3.0",
-    "@angular/router": "13.3.0",
+    "@angular/common": "14.3.0",
+    "@angular/compiler": "14.3.0",
+    "@angular/core": "14.3.0",
+    "@angular/forms": "14.3.0",
+    "@angular/platform-browser": "14.3.0",
+    "@angular/platform-browser-dynamic": "14.3.0",
+    "@angular/router": "14.3.0",
     "@fontsource/lato": "4.5.0",
     "@icholy/duration": "5.0.0",
     "@ngx-translate/core": "14.0.0",
     "@ngx-translate/http-loader": "4.0.0",
-    "@ngxs/devtools-plugin": "3.7.3",
-    "@ngxs/logger-plugin": "3.7.3",
-    "@ngxs/storage-plugin": "3.7.3",
-    "@ngxs/store": "3.7.3",
-    "@sgu/auto-complete": "13.0.0-rc",
+    "@ngxs/devtools-plugin": "3.8.0",
+    "@ngxs/logger-plugin": "3.8.0",
+    "@ngxs/storage-plugin": "3.8.0",
+    "@ngxs/store": "3.8.0",
+    "@sgu/auto-complete": "14.0.0",
     "@swimlane/ngx-charts": "16.0.0",
     "@types/dagre-d3": "0.6.2",
     "@types/js-yaml": "3.12.2",
@@ -68,15 +68,16 @@
     "lodash-es": "4.17.21",
     "modernizr": "3.12.0",
     "moment": "2.29.4",
-    "monaco-editor": "0.33.0",
+    "monaco-editor": "0.44.0",
+    "monaco-editor-webpack-plugin": "7.1.0",
     "ng-event-source": "1.0.14",
-    "ng-zorro-antd": "13.4.0",
+    "ng-zorro-antd": "14.3.0",
     "ng2-codemirror-typescript": "3.13.1",
     "ng2-completer": "2.0.8",
     "ng2-dragula-sgu": "3.0.2",
     "ngx-clipboard": "12.1.0",
     "ngx-infinite-scroll": "7.2.0",
-    "ngx-markdown": "13.1.0",
+    "ngx-markdown": "14.0.1",
     "ngx-moment": "5.0.0",
     "postcss": "8.4.31",
     "prismjs": "1.27.0",
@@ -93,15 +94,15 @@
     "zxcvbn": "4.4.2"
   },
   "devDependencies": {
-    "@angular-builders/custom-webpack": "13.1.0",
-    "@angular-devkit/build-angular": "13.3.10",
-    "@angular-eslint/builder": "13.1.0",
-    "@angular-eslint/eslint-plugin": "13.1.0",
-    "@angular-eslint/eslint-plugin-template": "13.1.0",
-    "@angular-eslint/schematics": "13.1.0",
-    "@angular-eslint/template-parser": "13.1.0",
-    "@angular/cli": "13.3.0",
-    "@angular/compiler-cli": "13.3.0",
+    "@angular-builders/custom-webpack": "14.1.0",
+    "@angular-devkit/build-angular": "14.2.13",
+    "@angular-eslint/builder": "14.4.0",
+    "@angular-eslint/eslint-plugin": "14.4.0",
+    "@angular-eslint/eslint-plugin-template": "14.4.0",
+    "@angular-eslint/schematics": "14.4.0",
+    "@angular-eslint/template-parser": "14.4.0",
+    "@angular/cli": "14.2.13",
+    "@angular/compiler-cli": "14.3.0",
     "@commitlint/cli": "13.2.1",
     "@commitlint/config-conventional": "13.2.0",
     "@compodoc/compodoc": "1.1.19",
@@ -114,12 +115,12 @@
     "@types/lodash-es": "4.17.3",
     "@types/node": "12.11.1",
     "@types/sanitize-html": "2.3.1",
-    "@typescript-eslint/eslint-plugin": "5.17.0",
-    "@typescript-eslint/parser": "5.17.0",
+    "@typescript-eslint/eslint-plugin": "5.62.0",
+    "@typescript-eslint/parser": "5.62.0",
     "@typescript-eslint/typescript-estree": "5.17.0",
     "codelyzer": "6.0.0",
     "copy-webpack-plugin": "9.0.0",
-    "eslint": "8.2.0",
+    "eslint": "8.53.0",
     "eslint-plugin-import": "2.25.4",
     "eslint-plugin-jsdoc": "37.7.1",
     "eslint-plugin-prefer-arrow": "1.2.3",
@@ -133,8 +134,9 @@
     "karma-jasmine-html-reporter": "1.5.0",
     "karma-junit-reporter": "1.2.0",
     "lint-staged": "12.0.2",
+    "style-loader": "3.3.3",
     "ts-node": "8.3.0",
-    "typescript": "4.5.2",
+    "typescript": "4.8.4",
     "url": "0.11.0",
     "webdriver-manager": "12.1.7",
     "webpack-bundle-analyzer": "4.6.1",
