feat(ui): upgrade to angular 14 (#6688)

--- a/ui/angular.json
+++ b/ui/angular.json
@@ -147,8 +147,11 @@
           }
         },
         "test": {
-          "builder": "@angular-devkit/build-angular:karma",
+          "builder": "@angular-builders/custom-webpack:karma",
           "options": {
+            "customWebpackConfig": {
+              "path": "./extra-webpack.config.js"
+            },
             "main": "src/test.ts",
             "karmaConfig": "./karma.conf.js",
             "polyfills": "src/polyfills.ts",
@@ -211,7 +214,6 @@
       "projectType": "application"
     }
   },
-  "defaultProject": "ui-ng2",
   "schematics": {
     "@schematics/angular:component": {
       "prefix": "app",
@@ -220,5 +222,8 @@
     "@schematics/angular:directive": {
       "prefix": "app"
     }
+  },
+  "cli": {
+    "analytics": false
   }
 }
