--- a/ui/src/tsconfig.app.json
+++ b/ui/src/tsconfig.app.json
@@ -33,7 +33,6 @@
   ],
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
-    "strictInjectionParameters": true,
-    "enableIvy": true
+    "strictInjectionParameters": true
   }
 }
