fix: integration tests
Signed-off-by: François Samin <francois.samin@ovhcloud.com>

--- a/tests/lib/v2_install_gpg_key.yml
+++ b/tests/lib/v2_install_gpg_key.yml
@@ -62,10 +62,10 @@ steps:
     - result.statuscode ShouldEqual 204
 
   # Get the email address associated with the gpg key
-  script: "gpg --list-secret-keys | grep {{.input.gpg_key_id}} -A 1 | tail -n 1 | grep --only-matching --extended-regexp "<(.*)>" | head -n 1 | cut -c2- | rev | cut -c2- | rev"
-  vars:
-    emailAddress:
-      from: result.systemout
+  - script: "gpg --list-secret-keys | grep {{.input.gpg_key_id}} -A 1 | tail -n 1 | grep --only-matching --extended-regexp "<(.*)>" | head -n 1 | cut -c2- | rev | cut -c2- | rev"
+    vars:
+      emailAddress:
+        from: result.systemout
 
   # Add the emailAddress on the gitea user
   - type: http
