--- a/ui/angular.json
+++ b/ui/angular.json
@@ -80,13 +80,26 @@
               "node_modules/prismjs/prism.js"
             ],
             "allowedCommonJsDependencies": [
-              "raven-js",
+              "@icholy/duration",
+              "ansi_up",
+              "dagre-d3",
+              "diff",
               "dragula",
+              "fast-json-patch",
+              "jsrsasign",
               "js-yaml",
               "jsonschema",
-              "dagre-d3",
-              "ansi_up",
-              "fast-json-patch",
+              "moment",
+              "!../../../../../../../style-loader/dist/runtime/injectStylesIntoStyleTag.js",
+              "!../../../../../../../style-loader/dist/runtime/insertBySelector.js",
+              "!../../../../../../../style-loader/dist/runtime/styleTagTransform.js",
+              "!../../../../../../../style-loader/dist/runtime/setAttributesWithoutAttributes.js",
+              "!../../../../../../../style-loader/dist/runtime/styleDomAPI.js",
+              "!../../../../../../../style-loader/dist/runtime/insertStyleElement.js",
+              "raven-js",
+              "rfdc",
+              "sanitize-html",
+              "style-loader",
               "zxcvbn"
             ]
           },
