--- a/ui/package.json
+++ b/ui/package.json
@@ -24,24 +24,25 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "15.2.10",
-    "@angular/cdk": "15.2.9",
-    "@angular/common": "15.2.10",
-    "@angular/compiler": "15.2.10",
-    "@angular/core": "15.2.10",
-    "@angular/forms": "15.2.10",
-    "@angular/platform-browser": "15.2.10",
-    "@angular/platform-browser-dynamic": "15.2.10",
-    "@angular/router": "15.2.10",
+    "@angular/animations": "16.2.12",
+    "@angular/cdk": "16.2.12",
+    "@angular/common": "16.2.12",
+    "@angular/compiler": "16.2.12",
+    "@angular/core": "16.2.12",
+    "@angular/forms": "16.2.12",
+    "@angular/platform-browser": "16.2.12",
+    "@angular/platform-browser-dynamic": "16.2.12",
+    "@angular/router": "16.2.12",
+    "@babel/runtime": "7.23.2",
     "@fontsource/lato": "4.5.0",
     "@icholy/duration": "5.0.0",
-    "@ngx-translate/core": "14.0.0",
-    "@ngx-translate/http-loader": "4.0.0",
-    "@ngxs/devtools-plugin": "3.8.0",
-    "@ngxs/logger-plugin": "3.8.0",
-    "@ngxs/storage-plugin": "3.8.0",
-    "@ngxs/store": "3.8.0",
-    "@swimlane/ngx-charts": "16.0.0",
+    "@ngx-translate/core": "15.0.0",
+    "@ngx-translate/http-loader": "8.0.0",
+    "@ngxs/devtools-plugin": "3.8.1",
+    "@ngxs/logger-plugin": "3.8.1",
+    "@ngxs/storage-plugin": "3.8.1",
+    "@ngxs/store": "3.8.1",
+    "@swimlane/ngx-charts": "20.5.0",
     "@types/dagre-d3": "0.6.2",
     "@types/js-yaml": "3.12.2",
     "@types/zxcvbn": "4.4.0",
@@ -49,12 +50,12 @@
     "animate.css": "3.7.2",
     "ansi_up": "5.0.0",
     "codemirror": "5.58.2",
-    "core-js": "2.6.3",
-    "d3": "5.7.0",
-    "d3-zoom": "1.7.3",
+    "core-js": "3.33.3",
+    "d3": "7.8.5",
+    "d3-zoom": "3.0.0",
     "dagre-d3": "0.6.4",
     "diff": "4.0.2",
-    "dragula": "3.7.2",
+    "dragula": "3.7.3",
     "enhanced-resolve": "4.1.1",
     "fast-json-patch": "3.1.1",
     "font-awesome": "4.7.0",
@@ -70,16 +71,16 @@
     "monaco-editor": "0.44.0",
     "monaco-editor-webpack-plugin": "7.1.0",
     "ng-event-source": "1.0.14",
-    "ng-zorro-antd": "15.1.1",
+    "ng-zorro-antd": "16.2.2",
     "ng2-codemirror-typescript": "3.13.1",
     "ng2-completer": "2.0.8",
-    "ng2-dragula-sgu": "3.0.2",
-    "ngx-clipboard": "12.1.0",
-    "ngx-infinite-scroll": "7.2.0",
-    "ngx-markdown": "15.1.2",
-    "ngx-moment": "5.0.0",
+    "ng2-dragula": "5.0.1",
+    "ngx-clipboard": "16.0.0",
+    "ngx-infinite-scroll": "16.0.0",
+    "ngx-markdown": "16.0.0",
+    "ngx-moment": "6.0.2",
     "postcss": "8.4.31",
-    "prismjs": "1.27.0",
+    "prismjs": "1.28.0",
     "raven-js": "3.27.2",
     "rxjs": "6.5.5",
     "rxjs-compat": "6.3.3",
@@ -89,19 +90,19 @@
     "ts-helpers": "1.1.2",
     "tslib": "2.0.0",
     "url": "0.11.0",
-    "zone.js": "0.11.4",
+    "zone.js": "0.13.3",
     "zxcvbn": "4.4.2"
   },
   "devDependencies": {
-    "@angular-builders/custom-webpack": "15.0.0",
-    "@angular-devkit/build-angular": "15.2.10",
-    "@angular-eslint/builder": "15.2.1",
-    "@angular-eslint/eslint-plugin": "15.2.1",
-    "@angular-eslint/eslint-plugin-template": "15.2.1",
-    "@angular-eslint/schematics": "15.2.1",
-    "@angular-eslint/template-parser": "15.2.1",
-    "@angular/cli": "15.2.10",
-    "@angular/compiler-cli": "15.2.10",
+    "@angular-builders/custom-webpack": "16.0.1",
+    "@angular-devkit/build-angular": "16.2.10",
+    "@angular-eslint/builder": "16.3.1",
+    "@angular-eslint/eslint-plugin": "16.3.1",
+    "@angular-eslint/eslint-plugin-template": "16.3.1",
+    "@angular-eslint/schematics": "16.3.1",
+    "@angular-eslint/template-parser": "16.3.1",
+    "@angular/cli": "16.2.10",
+    "@angular/compiler-cli": "16.2.12",
     "@commitlint/cli": "13.2.1",
     "@commitlint/config-conventional": "13.2.0",
     "@compodoc/compodoc": "1.1.19",
@@ -112,7 +113,7 @@
     "@types/jasmine": "3.6.0",
     "@types/jasminewd2": "2.0.8",
     "@types/lodash-es": "4.17.3",
-    "@types/node": "12.11.1",
+    "@types/node": "18.18.10",
     "@types/sanitize-html": "2.3.1",
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "@typescript-eslint/parser": "5.62.0",
@@ -121,7 +122,7 @@
     "copy-webpack-plugin": "9.0.0",
     "eslint": "8.53.0",
     "eslint-plugin-import": "2.25.4",
-    "eslint-plugin-jsdoc": "37.7.1",
+    "eslint-plugin-jsdoc": "46.9.0",
     "eslint-plugin-prefer-arrow": "1.2.3",
     "husky": "3.0.5",
     "jasmine-core": "3.6.0",
@@ -135,7 +136,7 @@
     "lint-staged": "12.0.2",
     "style-loader": "3.3.3",
     "ts-node": "8.3.0",
-    "typescript": "4.8.4",
+    "typescript": "4.9.5",
     "url": "0.11.0",
     "webdriver-manager": "12.1.7",
     "webpack-bundle-analyzer": "4.6.1",
